--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Run MLflow Project (Local Training)
         run: |
-          mlflow run MLProject/ --no-conda
+          mlflow run MLProject/ --env-manager local
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
