--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Build and Push Docker Image
         run: |
-          RUN_ID=$(mlflow runs list --experiment-id 0 --max-results 1 --output csv | head -n 2 | tail -n 1 | cut -d ',' -f 1)
+          RUN_ID=$(ls -t mlruns/0 | grep -v "meta.yaml" | head -n 1)
           
           echo "Run ID yang ditemukan: $RUN_ID"
 
