--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,42 +9,43 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4 # Gunakan versi terbaru
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: '3.9'
 
       - name: Install dependencies
         run: |
-          pip install mlflow pandas scikit-learn docker
+          pip install mlflow pandas scikit-learn dagshub
 
-      - name: Run MLflow Project (Local Training)
+      - name: Run MLflow Project
         run: |
+          # Jalankan mlflow run di folder MLProject
           mlflow run MLProject/ --env-manager local
 
       - name: Login to Docker Hub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3 # Versi terbaru
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and Push Docker Image
         run: |
-          RUN_ID=$(ls -t mlruns/0 | grep -v "meta.yaml" | head -n 1)
-          echo "Run ID ditemukan: $RUN_ID"
-
+          # Cari lokasi folder model yang dihasilkan oleh autolog
+          MODEL_PATH=$(find mlruns -name "model" -type d | head -n 1)
+          echo "Model path ditemukan di: $MODEL_PATH"
+          
           DOCKER_USER=${{ secrets.DOCKERHUB_USERNAME }}
           REPO_NAME="mlflow-model-galih"
           IMAGE_TAG="$DOCKER_USER/$REPO_NAME:latest"
-          
-          echo "Building image: $IMAGE_TAG"
 
+          # Build Docker menggunakan path model yang ditemukan
           mlflow models build-docker \
-            -m "runs:/$RUN_ID/model" \
+            -m "$MODEL_PATH" \
             -n "$IMAGE_TAG" \
             --env-manager local
 
-          echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "$DOCKER_USER" --password-stdin
+          # Push ke Docker Hub
           docker push "$IMAGE_TAG"
