--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,3 +57,9 @@ jobs:
 
           # Push ke Docker Hub
           docker push "$IMAGE_TAG"
+
+      - name: Upload Training Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: model-galih
+          path: mlruns/              
